<resources>
    <string name="app_name">General Motors Application</string>


    <string name="action_settings">Settings</string>
   <string name="hello_twitter">General Motors Login</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search Through Nothing</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter Username</string>

    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_login">Login</string>

    <string name="hello_world">Hello world!</string>
</resources>
